Fixed .tablepane overflow styling bug
[ci skip]

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -2506,9 +2506,11 @@ h2 + .actions {
 /* ----------------------------------------*/
 
 .tablepane {
-  margin: calc(var(--pane-padding, 22px) * -1)
-    calc(var(--pane-padding, 22px) * -1)
-    calc(var(--pane-padding, 24px) * -1 + var(--pane-padding, var(--m)));
+  margin: calc(var(--pane-padding, calc(var(--xl) - 2px)) * -1)
+    calc(var(--pane-padding, calc(var(--padding) - 2px)) * -1)
+    calc(
+      var(--pane-padding, var(--padding)) * -1 + var(--pane-padding, var(--m))
+    );
   padding: 0 !important;
   overflow-x: auto;
 
